tests/api/reference/negative/11-insert-index.asm
const invalid: bytes = bytes.insert(b"AB", 3, b"C")
